--- a/wcloud-app/package.json
+++ b/wcloud-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "d3-cloud": "^1.2.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-horizontal-scrolling-menu": "^8.2.0",
